--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -8,9 +8,9 @@ server {
         proxy_redirect off;
     }
     location ^~ /uploads/ {
-        root /home/box/web/
+        root /home/box/web/;
     }
     location ~* ^.+\.\w+$ {
-        root /home/box/web/public/
+        root /home/box/web/public/;
     }
 }
